--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css">
 
 
-    <title>Nordic Giant Development</title>
+    <title>Welcome to my Website!</title>
+    
   </head>
 
   <body>
